# educoder-cli

./: LICENSE  README.md  main.py  pyproject.toml
.trellis/spec/backend/: cli-command-guidelines.md  database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-05/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-05/05-22-cli-layer-commands/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-22-cli-login-health/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-22-document-uv-tool-install/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-22-fix-task-game-identifier/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-22-handle-null-test-output/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-22-improve-task-text-output/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-22-project-skill-install-docs/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-22-render-task-description-markdown/: prd.md  task.json
.trellis/tasks/archive/2026-05/05-22-write-problem-skill/: prd.md  task.json
.trellis/workspace/chumeng/: index.md  journal-1.md
skills/educoder-cli/: SKILL.md
skills/educoder-cli/agents/: openai.yaml
skills/educoder-cli/references/: educoder-cli.md
src/educoder_cli/: __init__.py  __main__.py  cli.py  client.py  credentials.py  errors.py  models.py  signature.py
tests/: test_cli.py  test_client.py  test_credentials.py  test_models.py  test_signature.py
(+4 files in other folders)
